# LlamAgent-pub

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  llamagent.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: VERSION_CHANGELOG.md  llamagent-api-reference.md  llamagent-architecture.md
examples/: 01_quick_start.py  02_tools.py  03_modules.py  04_reasoning.py  05_persona.py  06_sandbox.py  07_child_agent.py  08_skill.py  09_workspace_and_jobs.py  10_task_mode.py  11_continuous_mode.py
llamagent/: __init__.py  agent_runner.py  main.py
llamagent/core/: __init__.py  agent.py  authorization.py  config.py  contract.py  controller.py  hooks.py  llm.py  logging_llm.py  message_channel.py  persona.py  runner.py  zone.py
llamagent/interfaces/: __init__.py  api_server.py  cli.py  presets.py  sessions.py  stream_adapter.py  stream_protocol.py  web_ui.py
llamagent/modules/: __init__.py  command_runner.py
llamagent/modules/child_agent/: __init__.py  budget.py  module.py  policy.py  runner.py  task_board.py
llamagent/modules/compression/: __init__.py  module.py
llamagent/modules/fs_store/: __init__.py  parser.py  store.py
llamagent/modules/job/: __init__.py  handle.py  module.py  service.py
llamagent/modules/mcp/: __init__.py  client.py  module.py  server_example.py
llamagent/tools/: __init__.py
tests/: conftest.py  test_ask_user.py  test_authorization.py  test_builtin_tools.py  test_child_agent.py  test_continuous_mode.py  test_cross_module.py  test_governance.py  test_hooks.py  test_integration.py  test_job.py  test_pipeline.py  test_planning.py  test_react.py  test_sandbox.py  test_scratch.py  test_skill.py  test_stream_adapter.py  test_task_mode.py  test_task_scope.py  test_v2_features.py  test_web_search.py  test_workspace.py
(+83 files in other folders)
